graph94/kubernates/springboot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-app-2146c597-dc6b-4ccd-88c2-031aeaef96e5
  namespace: a39bf9b7-4e0e-4638-8c8a-602100be1138
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot-app-2146c597-dc6b-4ccd-88c2-031aeaef96e5
  template:
    metadata:
      labels:
        app: springboot-app-2146c597-dc6b-4ccd-88c2-031aeaef96e5
    spec:
      containers:
      - name: springboot
        image: ravi8881/a39bf9b7-4e0e-4638-8c8a-602100be1138-049b401f-67e8-45fd-b9fe-4729bec2c36e-1db80f47-e09a-4901-a45a-969c063ae097-2146c597-dc6b-4ccd-88c2-031aeaef96e5-graph:1.0.0
        ports:
        - containerPort: 8081
