graph94/kubernates/springboot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-service-2146c597-dc6b-4ccd-88c2-031aeaef96e5
  namespace: a39bf9b7-4e0e-4638-8c8a-602100be1138
spec:
  selector:
    app: springboot-app-2146c597-dc6b-4ccd-88c2-031aeaef96e5
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
  type: ClusterIP
