graph94/kubernates/springboot-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-ingress-2146c597-dc6b-4ccd-88c2-031aeaef96e5
  namespace: a39bf9b7-4e0e-4638-8c8a-602100be1138
  annotations:
    ngrok.com/ingress-mode: edge
  labels:
    app: springboot-app-2146c597-dc6b-4ccd-88c2-031aeaef96e5
spec:
  ingressClassName: ngrok
  rules:
    - host: picked-apt-wombat.ngrok-free.app
      http:
        paths:
          - backend:
              service:
                name: springboot-service-2146c597-dc6b-4ccd-88c2-031aeaef96e5
                port:
                  number: 80
            path: /graphiql
            pathType: Prefix
          - backend:
              service:
                name: springboot-service-2146c597-dc6b-4ccd-88c2-031aeaef96e5
                port:
                  number: 80
            path: /graphql
            pathType: Prefix
